:bug: fix: horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
   display: flex;
   height: 100vh;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 main {
